fix: better dark mode

--- a/src/components/theme/theme-toggle.module.css
+++ b/src/components/theme/theme-toggle.module.css
@@ -1,12 +1,3 @@
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .toggleButton {
   border-radius: 3px;
   padding: 0.5rem;
@@ -17,7 +8,6 @@
   margin-top: var(--spacing-4);
   max-width: min-content;
   align-self: flex-end;
-  animation: fadeIn 0.8s forwards;
 }
 
 .toggleButton:hover {
