--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ body.font-jp {
     sans-serif;
 }
 
-html[data-theme="light"] {
+:root {
   color-scheme: light;
   --color-background: hsl(0, 0%, 100%);
   --color-logo-1: hsl(240, 6%, 15%);
@@ -56,7 +56,7 @@ html[data-theme="light"] {
   --color-text: hsl(0, 0%, 0%);
 }
 
-html[data-theme="dark"] {
+html.dark {
   color-scheme: dark;
   --color-background: hsl(0, 0%, 6%);
   --color-logo-1: hsl(240, 6%, 15%);
@@ -65,6 +65,19 @@ html[data-theme="dark"] {
   --color-logo-4: hsl(240, 7%, 27%);
   --color-logo-5: hsl(213, 16%, 39%);
   --color-text: hsl(0, 0%, 100%);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root:not(.light) {
+    color-scheme: dark;
+    --color-background: hsl(0, 0%, 6%);
+    --color-logo-1: hsl(240, 6%, 15%);
+    --color-logo-2: hsl(214, 26%, 52%);
+    --color-logo-3: hsl(57, 26%, 54%);
+    --color-logo-4: hsl(240, 7%, 27%);
+    --color-logo-5: hsl(213, 16%, 39%);
+    --color-text: hsl(0, 0%, 100%);
+  }
 }
 
 /* Reset from https://courses.joshwcomeau.com/css-for-js/treasure-trove/010-global-styles */
